# Horn-Minimization-Code

./: .gitignore  CMakeLists.txt  MaierBerczi.callgrind  README.md  catch.h  main.cpp  out.prof  trash.txt
CanonicalBasis/: fca_algorithms.h  fca_attribute_incremental.cpp  fca_attribute_incremental.h  fca_bitset.cpp  fca_bitset.h  fca_closure.cpp  fca_closure.h  fca_closure_operators.h  fca_config.h  fca_datastructures.h  fca_definitions.h  fca_implications.cpp  fca_implications.h  fca_linclosure.cpp  fca_linclosure.h  fca_mingen.cpp  fca_minimization.cpp  fca_minimization.h  graph_FDgraph.cpp  graph_FDgraph.h  horn_afp.cpp  horn_afp.h  horn_berczi.cpp  horn_berczi.h  horn_day.h  horn_duquenne.cpp  horn_duquenne.h  horn_lectic.cpp  horn_lectic.h  horn_maier.cpp  horn_maier.h  horn_minimization_algo.h  horn_shock.cpp  horn_shock.h  test_functions.cpp  test_functions.h
CanonicalBasis/Unused/: horn_day.cpp  horn_lectic.cpp  horn_lectic.h  horn_shock.h  test_functions.cpp
Tests/: Reader.cpp  Reader.h  Test_Berczi_Unit.cpp  Test_Maier_Unit.cpp  Tests_LinClosure.cpp  basis_1.txt  basis_2.txt  basis_3.txt
Tests/CSVLogs/: Triple_Debug.csv  log_1.csv
Tests/CSVLogs/Finetune/AFP/: AFP_Operators_100attr.csv  AFP_Operators_100impl_new.csv  AFP_Red_100impl.csv
Tests/CSVLogs/Finetune/Berczi/: Berczi_ClosureOperators_100impl_p2.csv  Berczi_Operators_100attr.csv  Berczi_Operators_100attr_p1.csv  Berczi_Operators_100impl.csv  Berczi_Red_100impl.csv
Tests/CSVLogs/Finetune/Duquenne/: DuquenneClo_500attr_testvar.csv  Duquenne_1000impl_p1.csv  Duquenne_100attr_p1.csv  Duquenne_Red_1000attr.csv  Duquenne_Red_100attr.csv  Duquenne_Red_500attr.csv  Duquenne_Red_500impl.csv
Tests/CSVLogs/Finetune/Maier/: MaierClo_500attr_testvar.csv  Maier_Operators_1000attr.csv  Maier_Operators_1000attr_new.csv  Maier_Operators_1000impl_p1.csv  Maier_Operators_100attr_p1.csv  Maier_Red_100attr.csv  (+3 more)
Tests/CSVLogs/Old/: AFP_Stack_100impl_p1.csv  Berczi_ClosureOperators_100impl_p1.csv  Duquenne_Debug.csv  Maier_OP2_SPECT_DG.csv  Maier_OP2_SPECT_min.csv  Maier_OP2_SPECT_mingen.csv  Maier_OP2_SPECT_proper.csv  Maier_OP2_breast-cancer_DG.csv  Maier_OP2_breast-cancer_min.csv  Maier_OP2_breast-cancer_mingen.csv  Maier_OP2_breast-cancer_proper.csv  Maier_OP2_breast-w_DG.csv  Maier_OP2_breast-w_min.csv  Maier_OP2_breast-w_mingen.csv  Maier_OP2_breast-w_proper.csv  Maier_OP2_flare_DG.csv  Maier_OP2_flare_min.csv  Maier_OP2_flare_mingen.csv  Maier_OP2_flare_proper.csv  Maier_OP2_post-operative_DG.csv  Maier_OP2_post-operative_mingen.csv  Maier_OP2_post-operative_proper.csv  Maier_OP2_vote_DG.csv  Maier_OP2_vote_min.csv  Maier_OP2_vote_mingen.csv  Maier_OP2_vote_proper.csv  Maier_OP2_zoo_min.csv  Maier_OP2_zoo_mingen.csv  Maier_OP2_zoo_proper.csv  Maier_OP_SPECT_DG.csv  Maier_OP_SPECT_min.csv  Maier_OP_SPECT_mingen.csv  Maier_OP_SPECT_proper.csv  Maier_OP_breast-cancer_DG.csv  Maier_OP_breast-cancer_min.csv  Maier_OP_breast-cancer_mingen.csv  Maier_OP_breast-cancer_proper.csv  Maier_OP_breast-w_DG.csv  Maier_OP_breast-w_min.csv  Maier_OP_breast-w_mingen.csv  (+28 more)
Tests/CSVLogs/Random/: AFP_100attr_500rep.csv  All_10000impl_100rep.csv  All_1000attr_100rep.csv  All_1000attr_100rep_2.csv  All_1000attr_100rep_3.csv  All_1000attr_100rep_4.csv  All_1000impl_500rep.csv  All_100attr_500rep.csv  All_500attr_500rep.csv  All_500impl_500rep.csv  MinCover_100attr_1000rep.csv  MinCover_100attr_1000rep_2.csv  MinMaierDuq_100attr_1000rep.csv  MinMaierDuq_100attr_500rep.csv  MinMaierDuq_100impl_500rep.csv  MinMaierDuq_500impl_500rep.csv
Tests/CSVLogs/Real/: All_1000attr.csv  DuqMaierLin_SPECT_DG.csv  DuqMaierLin_SPECT_min.csv  DuqMaierLin_SPECT_min2.csv  DuqMaierLin_SPECT_mingen.csv  DuqMaierLin_SPECT_proper.csv  DuqMaierLin_breast-cancer_DG.csv  DuqMaierLin_breast-cancer_min.csv  DuqMaierLin_breast-cancer_min2.csv  DuqMaierLin_breast-cancer_mingen.csv  DuqMaierLin_breast-cancer_proper.csv  DuqMaierLin_breast-w_DG.csv  DuqMaierLin_breast-w_min.csv  DuqMaierLin_breast-w_min2.csv  DuqMaierLin_breast-w_mingen.csv  DuqMaierLin_breast-w_proper.csv  DuqMaierLin_flare_DG.csv  DuqMaierLin_flare_min.csv  DuqMaierLin_flare_min2.csv  DuqMaierLin_flare_mingen.csv  DuqMaierLin_flare_proper.csv  DuqMaierLin_post-operative_DG.csv  DuqMaierLin_post-operative_min.csv  DuqMaierLin_post-operative_min2.csv  DuqMaierLin_post-operative_mingen.csv  DuqMaierLin_post-operative_proper.csv  DuqMaierLin_vote_DG.csv  DuqMaierLin_vote_min.csv  DuqMaierLin_vote_min2.csv  DuqMaierLin_vote_mingen.csv  DuqMaierLin_vote_proper.csv  DuqMaierLin_zoo_DG.csv  DuqMaierLin_zoo_min.csv  DuqMaierLin_zoo_mingen.csv  DuqMaierLin_zoo_proper.csv
Tests/Contradictions/: DG_1.txt  input_1.txt  input_2.txt  inter_1.txt  output_1.txt
Tests/NonClosedEmptySet/: DG_2.txt  input_1.txt  input_2.txt  input_3.txt  inter_1.txt  inter_2.txt  inter_3.txt  output_2.txt  output_3.txt
Tests/NonReduced/: DG_1.txt  input_1.txt  inter_1.txt
Tests/RealDatasets/: SPECT_DG.imp  SPECT_min.imp  SPECT_min2.imp  SPECT_mingen.imp  SPECT_proper.imp  breast-cancer_DG.imp  breast-cancer_min.imp  breast-cancer_min2.imp  breast-cancer_mingen.imp  breast-cancer_proper.imp  breast-w_DG.imp  breast-w_min.imp  breast-w_min2.imp  flare_DG.imp  flare_min.imp  flare_min2.imp  flare_mingen.imp  flare_proper.imp  post-operative_DG.imp  post-operative_min.imp  post-operative_min2.imp  post-operative_mingen.imp  post-operative_proper.imp  solar_min.imp  solar_mingen.imp  solar_obj.imp  solar_proper.imp  vote_DG.imp  vote_min.imp  vote_min2.imp  wisconsin_cancer_min.imp  zoo_DG.imp  zoo_min.imp  zoo_min2.imp  zoo_mingen.imp  zoo_obj.imp  zoo_proper.imp
Tests/Standard/: DG_1.txt  DG_2.txt  DG_3.txt  input_1.txt  input_10.txt  input_2.txt  input_3.txt  input_4.txt  input_5.txt  input_6.txt  input_7.txt  input_8.txt  input_9.txt  inter_2.txt  output_3.txt
Tests/Testers/: BercziTester.cpp  BercziTester.h  GridTester.cpp  GridTester.h  Tester.cpp  Tester.h
Tests/Tools/: ImplicationTools.cpp  ImplicationTools.h
Tests/UnitTesters/: MaierTester.cpp  MaierTester.h  Test_Berczi_Unit.cpp  Test_Maier_Unit.cpp  Tester.cpp
(+241 files in other folders)
